# money_flow_web_api

./: Cargo.toml  Dockerfile
migrations/: 20251023191333_create_user_table.up.sql  20251026141336_create_categories.up.sql  20251026143454_create_transactions.up.sql  20251106141818_constraint_categories_table.down.sql  20251106141818_constraint_categories_table.up.sql
src/: lib.rs  main.rs  utils.rs
src/controllers/: auth.rs  categories.rs  me.rs  transactions.rs
src/data/: categories.rs  transactions.rs  user.rs
src/middleware/: auth.rs
src/models/: auth.rs  categories.rs  mod.rs  shared.rs  transactions.rs  user.rs
src/services/: auth.rs  categories.rs  mod.rs  transactions.rs  user.rs
tests/: controller_auth_tests.rs  data_user_tests.rs  service_auth_tests.rs  user_tests.rs
