[package]
name = "moneyflow"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "uuid",
] }
actix-web = "4"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
dotenv = "0.15.0"
bcrypt = "0.17.1"
