[package]
name = "moneyflow"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "uuid",
  "macros",
] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
dotenv = "0.15.0"
bcrypt = "0.17.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
thiserror = "2.0.17"
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
